# seamless-3dep

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  release.yml  test.yml
dev/: 404.html  index.html  sitemap.xml
dev/CHANGELOG/: index.html
dev/CONTRIBUTING/: index.html
dev/LICENSE/: index.html
dev/examples/: index.html
dev/examples/dem/: index.html
dev/examples/elevation/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/examples/: dem.ipynb  dem.py  elevation.ipynb  elevation.py  global_dem.ipynb  global_dem.py  index.md  twi.ipynb  twi.py
latest/: 404.html  docs_hooks.py  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/CONTRIBUTING/: index.html
latest/LICENSE/: index.html
latest/examples/: elevation.py  index.html
latest/examples/WBT/: settings.json
latest/examples/WBT/plugins/: conditional_evaluation  conditioned_latin_hypercube  convergence_index  correct_stream_vector_direction  edge_contamination  exposure_towards_wind_flux  extract_by_attribute  gaussian_scale_space  heat_map  individual_tree_detection  install_wb_extension  launch_wb_runner  lidar_shift  local_quadratic_regression  max_upslope_value  otsu_thresholding  qin_flow_accumulation  quinn_flow_accumulation  raster_calculator  repair_stream_vector_topology  rho8_flow_accumulation  split_vector_lines  travelling_salesman_problem  vector_stream_network_analysis
latest/examples/data/: dem_e6e7db8c5a0b94c76cddf41fd5c74c9243a27204091feb4b7632e646fd8a5234.vrt  slope_degrees_e6e7db8c5a0b94c76cddf41fd5c74c9243a27204091feb4b7632e646fd8a5234.vrt  slope_e6e7db8c5a0b94c76cddf41fd5c74c9243a27204091feb4b7632e646fd8a5234.vrt  twi_e6e7db8c5a0b94c76cddf41fd5c74c9243a27204091feb4b7632e646fd8a5234.vrt
latest/examples/dem/: index.html
latest/examples/elevation/: elevation.ipynb  index.html
latest/examples/global_dem/: index.html
latest/examples/twi/: index.html  twi.ipynb
latest/reference/: index.html
latest/search/: search_index.json
src/seamless_3dep/: __init__.py  _https_download.py  _pools.py  _vrt_pools.py  seamless_3dep.py
tests/: test_3dep.py  test_decompose.py  test_dem.py
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/CHANGELOG/: index.html
v0.4.0/CONTRIBUTING/: index.html
v0.4.0/LICENSE/: index.html
v0.4.0/examples/: elevation.py  index.html
v0.4.0/examples/dem/: index.html
v0.4.0/examples/elevation/: elevation.ipynb  index.html
v0.4.0/reference/: index.html
