[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "seamless-3dep"
description = "Easy retrieval of smealess DEM from 3DEP across US."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "rasterio",
]
urls.Changelog = "https://seamless-3dep.readthedocs.io/latest/CHANGELOG"
urls.CI = "https://github.com/hyriver/seamless-3dep/actions"
urls.Homepage = "https://seamless-3dep.readthedocs.io"
urls.Issues = "https://github.com/hyriver/seamless-3dep/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/seamless_3dep",
]

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [ "__pycache__", "benchmarks" ]

lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]

lint.per-file-ignores."seamless_3dep/seamless_3dep.py" = [
  # specific type error ignored
  "PGH003",
]
lint.per-file-ignores."seamless_3dep/tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
]
lint.extend-safe-fixes = [
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [ "seamless_3dep" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]

lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.pixi,pixi.lock,**.ipynb"
ignore-words-list = "gage,gages"

[tool.pytest.ini_options]
addopts = "-v --cov --junitxml=junit.xml --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]
omit = [
  "**/__init__.py",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
  "seamless_3dep",
]

[tool.pyright]
exclude = [
  ".pixi/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/",
]
include = [
  "src/seamless_3dep",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
reportInvalidTypeForm = false
typeCheckingMode = "strict"

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs build --strict"
docs = { cmd = [ "mkdocs", "serve" ], depends-on = [ "build-docs" ] }

[tool.pixi.project]
channels = [ "conda-forge", "pytorch" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.pixi.pypi-dependencies]
seamless_3dep = { path = ".", editable = true }

[tool.pixi.feature.docs.pypi-dependencies]
black = "*"
mdx-truly-sane-lists = ">=1.3"
mkdocs = ">=1.5.3"
mkdocs-jupyter = "*"
mkdocs-material = ">=9.5.20"
mkdocstrings-python = "*"

[tool.pixi.feature.dev.dependencies]
# core dependencies
rasterio = "*"
# example dependencies
rioxarray = "*"
geopandas = ">=1"
pywbt = ">=0.2.7"
gdal = "*"
# vscode dependencies
ipykernel = "*"
ipywidgets = "*"
nbconvert = ">=7.16.4"
notebook = ">=7.2.2"
pytest = "*"

[tool.pixi.feature.test.dependencies]
coverage = "*"
pytest-cov = "*"
pytest-sugar = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
codespell = "*"

[tool.pixi.feature.typecheck.dependencies]
pyright = "*"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
tomli = "*"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.environments]
dev = { features = [ "dev", "py313" ] }
test310 = { features = [ "test", "py310" ] }
test313 = { features = [ "test", "py313" ] }
typecheck = { features = [ "typecheck", "py313" ] }
lint = { features = [ "lint", "py313" ], no-default-feature = true }
docs = { features = [ "dev", "docs", "py313" ] }

[tool.pixi.feature.test.tasks]
test = "pytest --cov --junitxml=junit.xml"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"
