[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "seamless-3dep"
description = "Easy retrieval of seamless DEM from 3DEP across US."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "numpy",
  "rasterio",
  "tiny-retriever>=0.1.1",
]
[[project.authors]]
name = "Taher Chegini"
email = "cheginit@gmail.com"
[project.optional-dependencies]
dev = [
  "geopandas>=1",
  "ipykernel",
  "ipywidgets",
  "jupytext",
  "matplotlib",
  "pytest",
  "pywbt>=0.2.8",
  "rioxarray",
]
docs = [
  "jupytext",
  "mike>=2",
  "mkdocs>=1.6",
  "mkdocs-jupyter",
  "mkdocs-materialx",
  "mkdocstrings[python]>=0.27",
  "ruff",
]
lint = [
  "codespell",
  "pre-commit",
]
test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
  "rioxarray",
  "shapely",
]
typecheck = [
  "pyproj",
  "rioxarray",
  "shapely",
  "ty",
  "xarray",
]
[project.urls]
Changelog = "https://docs.hyriver.io/seamless-3dep/latest/CHANGELOG/"
CI = "https://github.com/hyriver/seamless-3dep/actions"
Documentation = "https://docs.hyriver.io/seamless-3dep"
Homepage = "https://docs.hyriver.io/seamless-3dep"
Issues = "https://github.com/hyriver/seamless-3dep/issues"

[tool.hatch.build.targets.wheel]
packages = [
  "src/seamless_3dep",
]
[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [ ".pixi", "__pycache__" ]
[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]
ignore = [
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]
per-file-ignores."seamless_3dep/seamless_3dep.py" = [
  # specific type error ignored
  "PGH003",
]
per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
]
extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
isort.known-first-party = [ "seamless_3dep" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.pixi,pixi.lock,**.ipynb"
ignore-words-list = "gage,gages"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "-v",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
  "--basetemp=.pytest_tmp",
]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
markers = [
  "network: tests that make requests to external services",
]
testpaths = [
  "tests",
]

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]
[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if sys.platform",
]
ignore_errors = true
omit = [
  "**/__init__.py",
]
[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [
  "seamless_3dep",
]

[tool.ty.environment]
python-version = "3.10"
[tool.ty.rules]
all = "error"
[tool.ty.src]
include = [ "src/seamless_3dep" ]
exclude = [
  "**/__pycache__",
  "**/__init__.py",
]

[tool.pixi.environments]
dev = { features = [ "dev", "py314" ] }
test310 = { features = [ "test", "py310" ] }
test314 = { features = [ "test", "py314" ] }
typecheck = { features = [ "typecheck", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }
docs = { features = [ "docs", "dev", "py314" ] }
[tool.pixi.feature.dev.dependencies]
libgdal-core = "*"
nbconvert = ">=7.17.0,<8"
[tool.pixi.feature.docs.tasks]
docs-build = "mkdocs build --strict"
docs-serve = { cmd = "mkdocs serve", depends-on = [ "docs-build" ] }
docs-deploy = "mike deploy --push latest"
docs-release = "mike deploy --push --update-aliases $(git describe --tags --abbrev=0) stable"
[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"
[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
[tool.pixi.feature.test.dependencies]
libgdal-core = "*"
[tool.pixi.feature.test.tasks]
test = "pytest -m 'not network'"
test-network = "pytest -m network"
test-all = "pytest"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test-all" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }
[tool.pixi.feature.typecheck.tasks]
typecheck = "ty check"
[tool.pixi.pypi-dependencies]
seamless_3dep = { path = ".", editable = true }
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]
