[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "seamless-3dep"
description = "Easy retrieval of seamless DEM from 3DEP across US."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Taher Chegini", email = "cheginit@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "numpy>=2",
  "rasterio>=1.5",
  "tiny-retriever>=0.3",
]
optional-dependencies.dev = [
  "geopandas>=1",
  "ipykernel",
  "ipywidgets",
  "jupytext",
  "matplotlib",
  "nbconvert",
  "pytest",
  "pywbt>=0.2.8",
  "rioxarray",
]
optional-dependencies.docs = [
  "jupytext",
  "mike>=2",
  "mkdocs>=1.6",
  "mkdocs-jupyter",
  "mkdocs-materialx",
  "mkdocstrings[python]>=0.27",
  "ruff",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
  "rioxarray",
  "shapely",
]
optional-dependencies.typecheck = [
  "pandas-stubs",
  "pyproj",
  "pyright",
  "rioxarray",
  "scipy-stubs",
  "shapely",
  "types-geopandas",
  "types-pyyaml",
  "types-shapely",
  "xarray",
]
urls.Changelog = "https://docs.hyriver.io/seamless-3dep/latest/CHANGELOG/"
urls.CI = "https://github.com/hyriver/seamless-3dep/actions"
urls.Documentation = "https://docs.hyriver.io/seamless-3dep"
urls.Homepage = "https://docs.hyriver.io/seamless-3dep"
urls.Issues = "https://github.com/hyriver/seamless-3dep/issues"

[tool.hatch]
build.targets.wheel.packages = [
  "src/seamless_3dep",
]
version.source = "vcs"

[tool.pixi.environments]
dev = { features = [ "dev", "py314" ] }
test312 = { features = [ "test", "py312" ] }
test314 = { features = [ "test", "py314" ] }
typecheck = { features = [ "typecheck", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }
docs = { features = [ "docs", "py314" ] }

[tool.pixi.feature.dev.dependencies]
libgdal-core = ">=3.10"

[tool.pixi.feature.dev.tasks]
# Sync all percent-format .py scripts → paired .ipynb files
nb-sync = "jupytext --sync docs/examples/*.py"
# Execute all notebooks in-place (requires .ipynb to exist; run nb-sync first)
nb-execute = "jupyter nbconvert --to notebook --execute --inplace docs/examples/*.ipynb"
# Full workflow: sync .py → .ipynb, then execute - use before building docs or committing
nb-run = { depends-on = [ "nb-sync", "nb-execute" ] }
# Pair an existing .ipynb with a .py counterpart (one-time setup for imported notebooks)
nb-pair = "jupytext --set-formats 'ipynb,py:percent' docs/examples/*.ipynb"
# Strip all cell outputs from .ipynb files (keeps repo diff clean)
nb-clear = "jupyter nbconvert --ClearOutputPreprocessor.enabled=True --to notebook --inplace docs/examples/*.ipynb"

[tool.pixi.feature.docs.tasks]
docs-build = "mkdocs build --strict"
docs-serve = { cmd = "mkdocs serve", depends-on = [ "docs-build" ] }
docs-deploy = "mike deploy --push latest"
docs-release = "mike deploy --push --update-aliases $(git describe --tags --abbrev=0) stable"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

[tool.pixi.feature.test.dependencies]
libgdal-core = ">=3.10"

[tool.pixi.feature.test.tasks]
test = "pytest -m 'not network'"
test-network = "pytest -m network"
test-all = "pytest"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test-all" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"

[tool.pixi.pypi-dependencies]
seamless_3dep = { path = ".", editable = true }

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [ ".pixi", "__pycache__" ]
lint.select = [ "ALL" ]
# Adopted from https://github.com/python-attrs/attrs/blob/main/pyproject.toml
lint.ignore = [
  "ANN",     # pyright is better at this
  "ARG",     # unused arguments are normal when implementing interfaces
  "B905",    # zip without strict is fine
  "COM",     # ruff format takes care of our commas
  "D",       # we prefer our own docstring style
  "E501",    # leave line-length enforcement to ruff format
  "FBT",     # we don't hate bool args around here
  "FIX",     # yes, we want XXX as a marker
  "ISC001",  # conflicts with ruff format
  "N",       # we need more naming freedom
  "PLC0415", # sometimes, imports have to live elsewhere
  "PLR0913", # yes, many arguments, but most have defaults
  "PLR2004", # numbers are sometimes fine
  "TC001",   # first-party typing-only imports are cheap, keep simple for docs
  "TC003",   # stdlib typing-only imports are cheap, keep simple for docs
  "TRY301",  # raising within try/except is fine for us
]
lint.per-file-ignores."docs/*.py" = [
  "A001",   # shadowing builtins like `license` is fine for file paths
  "INP001", # no need for init files in docs
]
lint.per-file-ignores."docs/examples/*.{py,ipynb}" = [
  # notebook-generated files
  "B018",
  "D100",
  # we have commented-out code in notebook headers
  "ERA001",
]
lint.per-file-ignores."tests/*.py" = [
  "B015",    # pointless comparison in tests aren't pointless
  "B017",    # pytest.raises(Exception) is fine
  "B018",    # pointless expressions in tests aren't pointless
  "BLE001",  # Blind excepts are fine in tests
  "DTZ",     # datetime best practices don't matter in tests
  "EM",      # no need for exception msg hygiene in tests
  "INP001",  # no need for init files in tests
  "PLR0124", # pointless comparison in tests aren't pointless
  "PT011",   # broad is fine
  "PT012",   # sometimes we need more than a single stmt
  "RUF012",  # we don't do ClassVar annotations in tests
  "S",       # security concerns don't matter in tests
  "SIM201",  # sometimes we need to check `not ==`
  "SIM202",  # sometimes we need to check `not ==`
  "SIM300",  # Yoda rocks in asserts
  "SLF001",  # private member access is fine in tests
  "TRY",     # exception best practices don't matter in tests
]
lint.extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [ "seamless_3dep" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.pixi,pixi.lock,**.ipynb"
ignore-words-list = "gage,gages"

[tool.pyproject-fmt]
expand_tables = [ "tool.git-cliff", "tool.pixi" ]

[tool.pyright]
pythonVersion = "3.12"
include = [ "src" ]
ignore = [
  "docs/examples/*.py",
  "docs/examples/*.ipynb",
  "tests/*.py",
]
typeCheckingMode = "strict"
# Third-party libs in scientific Python often lack complete stubs
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "-v",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
  "--basetemp=.pytest_tmp",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
ini_options.markers = [
  "network: tests that make requests to external services",
]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.branch = true
run.parallel = true
run.source_pkgs = [
  "seamless_3dep",
]
paths.source = [ "src", "*/site-packages" ]
report.exclude_lines = [
  "if sys.platform",
  "if TYPE_CHECKING:",
]
report.ignore_errors = true
report.omit = [
  "**/__init__.py",
]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "kernelspec,jupytext"
cell_metadata_filter = "-all"
